force-app/main/default/objects/Enquiry__c/Enquiry__c.object-meta.xml
<CustomObject>
    <label>Enquiry</label>
    <nameField>
        <displayFormat>EN-{YYYY}{MM}{DD}{00}</displayFormat>
        <label>Enquiry No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Enquiries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>