force-app/main/default/objects/Enquiry__c/fields/Address_Parent__c.field-meta.xml
<CustomField>
    <fullName>Address_Parent__c</fullName>
    <label>Address (Parent)</label>
    <type>TextArea</type>
</CustomField>