force-app/main/default/objects/Enquiry__c/fields/Client_Email__c.field-meta.xml
<CustomField>
    <fullName>Client_Email__c</fullName>
    <label>Client Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>