force-app/main/default/objects/Enquiry__c/fields/Client_Name__c.field-meta.xml
<CustomField>
    <fullName>Client_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>If this field is not blank, it means this record is tagged to the client record internally</inlineHelpText>
    <label>Client Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Enquiries</relationshipLabel>
    <relationshipName>Enquiries</relationshipName>
    <type>Lookup</type>
</CustomField>