force-app/main/default/objects/Enquiry__c/fields/ClientNameEntered__c.field-meta.xml
<CustomField>
    <fullName>ClientNameEntered__c</fullName>
    <description>Name (as per BC/NRIC)</description>
    <inlineHelpText>Name (as per BC/NRIC)</inlineHelpText>
    <label>Client Name (Entered)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>