force-app/main/default/objects/Enquiry__c/fields/Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>Closed_Date__c</fullName>
    <description>When this field is entered Enquiry Status is updated to Closed and Case File is created without intake record.</description>
    <inlineHelpText>This is the date entered when the Short Case Type is closed.</inlineHelpText>
    <label>Closed Date</label>
    <type>Date</type>
</CustomField>