force-app/main/default/objects/Enquiry__c/fields/Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>Contact_Number__c</fullName>
    <description>contact number client personal information</description>
    <label>Contact Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>