force-app/main/default/objects/Enquiry__c/fields/Date_Cancelled__c.field-meta.xml
<CustomField>
    <fullName>Date_Cancelled__c</fullName>
    <inlineHelpText>Please enter the date the client decided to cancel the enquiry before SADeaf started work.</inlineHelpText>
    <label>Date Cancelled</label>
    <type>Date</type>
</CustomField>