force-app/main/default/objects/Enquiry__c/fields/Date_of_Enquiry__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Enquiry__c</fullName>
    <defaultValue>today()</defaultValue>
    <inlineHelpText>The date the enquiry was received by SADeaf - CS</inlineHelpText>
    <label>Date of Enquiry</label>
    <type>Date</type>
</CustomField>