force-app/main/default/objects/Enquiry__c/fields/Date_Withdrawn__c.field-meta.xml
<CustomField>
    <fullName>Date_Withdrawn__c</fullName>
    <inlineHelpText>Please enter the date the client decided to withdraw from the application/enquiry</inlineHelpText>
    <label>Date Withdrawn</label>
    <type>Date</type>
</CustomField>