force-app/main/default/objects/Enquiry__c/fields/Description_of_Issues__c.field-meta.xml
<CustomField>
    <fullName>Description_of_Issues__c</fullName>
    <label>Description of Issues</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>