force-app/main/default/objects/Enquiry__c/fields/Direct_Contact_No__c.field-meta.xml
<CustomField>
    <fullName>Direct_Contact_No__c</fullName>
    <label>Direct Contact No</label>
    <length>50</length>
    <type>Text</type>
</CustomField>