force-app/main/default/objects/Enquiry__c/fields/Email_Parent__c.field-meta.xml
<CustomField>
    <fullName>Email_Parent__c</fullName>
    <label>Email (Parent)</label>
    <type>Email</type>
</CustomField>