force-app/main/default/objects/Enquiry__c/fields/Email_Refererrer__c.field-meta.xml
<CustomField>
    <fullName>Email_Refererrer__c</fullName>
    <label>Email (Refererrer)</label>
    <type>Email</type>
</CustomField>