force-app/main/default/objects/Enquiry__c/fields/Enquiry_Option__c.field-meta.xml
<CustomField>
    <fullName>Enquiry_Option__c</fullName>
    <label>Enquiry Option</label>
    <length>50</length>
    <type>Text</type>
</CustomField>