force-app/main/default/objects/Enquiry__c/fields/Enquiry_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Enquiry_Remarks__c</fullName>
    <description>This field is mapped to this field in the enquiry form &quot;Brief description of assistance required from CS&quot;</description>
    <label>Enquiry Remarks</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>