force-app/main/default/objects/Enquiry__c/fields/Full_Name_Parent__c.field-meta.xml
<CustomField>
    <fullName>Full_Name_Parent__c</fullName>
    <label>Full Name (Parent)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>