force-app/main/default/objects/Enquiry__c/fields/Full_Name_Referrer__c.field-meta.xml
<CustomField>
    <fullName>Full_Name_Referrer__c</fullName>
    <label>Full Name (Referrer)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>