force-app/main/default/objects/Enquiry__c/fields/Home_phone__c.field-meta.xml
<CustomField>
    <fullName>Home_phone__c</fullName>
    <label>Home phone</label>
    <length>20</length>
    <type>Text</type>
</CustomField>