force-app/main/default/objects/Enquiry__c/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <label>Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N1</fullName>
            </value>
            <value>
                <fullName>N2</fullName>
            </value>
            <value>
                <fullName>K1</fullName>
            </value>
            <value>
                <fullName>K2</fullName>
            </value>
            <value>
                <fullName>Pri 1</fullName>
            </value>
            <value>
                <fullName>Pri 2</fullName>
            </value>
            <value>
                <fullName>Pri 3</fullName>
            </value>
            <value>
                <fullName>Pri 4</fullName>
            </value>
            <value>
                <fullName>Pri 5</fullName>
            </value>
            <value>
                <fullName>Pri 6</fullName>
            </value>
            <value>
                <fullName>Sec 1</fullName>
            </value>
            <value>
                <fullName>Sec 2</fullName>
            </value>
            <value>
                <fullName>Sec 3</fullName>
            </value>
            <value>
                <fullName>Sec 4</fullName>
            </value>
            <value>
                <fullName>Sec 5</fullName>
            </value>
            <value>
                <fullName>PreU 1</fullName>
            </value>
            <value>
                <fullName>PreU 2</fullName>
            </value>
            <value>
                <fullName>PreU 3</fullName>
            </value>
            <value>
                <fullName>Uni 1</fullName>
            </value>
            <value>
                <fullName>Uni 2</fullName>
            </value>
            <value>
                <fullName>Uni 3</fullName>
            </value>
            <value>
                <fullName>Uni 4</fullName>
            </value>
            <value>
                <fullName>Uni 5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>