force-app/main/default/objects/Enquiry__c/fields/Level_Category__c.field-meta.xml
<CustomField>
    <fullName>Level_Category__c</fullName>
    <label>Level Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre-School</fullName>
            </value>
            <value>
                <fullName>Lower Primary</fullName>
            </value>
            <value>
                <fullName>Upper Primary</fullName>
            </value>
            <value>
                <fullName>Secondary</fullName>
            </value>
            <value>
                <fullName>College</fullName>
            </value>
            <value>
                <fullName>Tertiary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>