force-app/main/default/objects/Enquiry__c/fields/Level_of_Hearing_Loss__c.field-meta.xml
<CustomField>
    <fullName>Level_of_Hearing_Loss__c</fullName>
    <label>Level of Hearing Loss</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aided</fullName>
            </value>
            <value>
                <fullName>Unaided</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>