force-app/main/default/objects/Enquiry__c/fields/Mode_of_Enquiry__c.field-meta.xml
<CustomField>
    <fullName>Mode_of_Enquiry__c</fullName>
    <label>Mode of Enquiry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Walk-in</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Text Message</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>