force-app/main/default/objects/Enquiry__c/fields/MOE_FAS__c.field-meta.xml
<CustomField>
    <fullName>MOE_FAS__c</fullName>
    <description>Ministry of Education Financial Assistance Scheme</description>
    <label>MOE_FAS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>