force-app/main/default/objects/Enquiry__c/fields/Name_of_Organisation__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Organisation__c</fullName>
    <label>Name of Organisation</label>
    <length>50</length>
    <type>Text</type>
</CustomField>