force-app/main/default/objects/Enquiry__c/fields/Name_of_School__c.field-meta.xml
<CustomField>
    <fullName>Name_of_School__c</fullName>
    <label>Name of School</label>
    <length>50</length>
    <type>Text</type>
</CustomField>