force-app/main/default/objects/Enquiry__c/fields/Number_of_Immediate_Family__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Immediate_Family__c</fullName>
    <description>For PR, indicate the number of immediate family members who are SG Citizen</description>
    <label>Number of Immediate Family</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>