force-app/main/default/objects/Enquiry__c/fields/Other_s_Services__c.field-meta.xml
<CustomField>
    <fullName>Other_s_Services__c</fullName>
    <label>Other&apos;s Services</label>
    <length>100</length>
    <type>Text</type>
</CustomField>