force-app/main/default/objects/Enquiry__c/fields/Others_Aids__c.field-meta.xml
<CustomField>
    <fullName>Others_Aids__c</fullName>
    <label>Others Aids</label>
    <length>50</length>
    <type>Text</type>
</CustomField>