force-app/main/default/objects/Enquiry__c/fields/Others_Education__c.field-meta.xml
<CustomField>
    <fullName>Others_Education__c</fullName>
    <label>Others Education</label>
    <length>50</length>
    <type>Text</type>
</CustomField>