force-app/main/default/objects/Enquiry__c/fields/Others_Medical_Condition__c.field-meta.xml
<CustomField>
    <fullName>Others_Medical_Condition__c</fullName>
    <label>Others Medical Condition</label>
    <length>50</length>
    <type>Text</type>
</CustomField>