force-app/main/default/objects/Enquiry__c/fields/RelationshipToClient__c.field-meta.xml
<CustomField>
    <fullName>RelationshipToClient__c</fullName>
    <label>Relationship to Client</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mother</fullName>
            </value>
            <value>
                <fullName>Father</fullName>
            </value>
            <value>
                <fullName>Friend</fullName>
            </value>
            <value>
                <fullName>Grandfather</fullName>
            </value>
            <value>
                <fullName>Grandmother</fullName>
            </value>
            <value>
                <fullName>Brother</fullName>
            </value>
            <value>
                <fullName>Sister</fullName>
            </value>
            <value>
                <fullName>Guardian</fullName>
            </value>
            <value>
                <fullName>Relatives</fullName>
            </value>
            <value>
                <fullName>Neighbour</fullName>
            </value>
            <value>
                <fullName>Others, please specify</fullName>
            </value>
            <value>
                <fullName>FosterParent</fullName>
            </value>
            <value>
                <fullName>Teacher</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>