force-app/main/default/objects/Enquiry__c/fields/Services__c.field-meta.xml
<CustomField>
    <fullName>Services__c</fullName>
    <label>Services</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>I&amp;R</fullName>
            </value>
            <value>
                <fullName>FinanceAsst</fullName>
                <label>Financial Assistance</label>
            </value>
            <value>
                <fullName>Employment</fullName>
            </value>
            <value>
                <fullName>Counseling</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Learning Support</fullName>
            </value>
            <value>
                <fullName>Speech Therapy</fullName>
            </value>
            <value>
                <fullName>Audiological Services</fullName>
            </value>
            <value>
                <fullName>OtherServices</fullName>
                <label>Other Services</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>