force-app/main/default/objects/Enquiry__c/fields/Specify_Services__c.field-meta.xml
<CustomField>
    <fullName>Specify_Services__c</fullName>
    <label>Specify Services</label>
    <length>50</length>
    <type>Text</type>
</CustomField>