force-app/main/default/objects/Enquiry__c/fields/Type_of_Aids__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Aids__c</fullName>
    <label>Type of Aids</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hearing Aids</fullName>
            </value>
            <value>
                <fullName>Cochlear Implants</fullName>
            </value>
            <value>
                <fullName>BAHA</fullName>
            </value>
            <value>
                <fullName>FM / Roger System</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>