force-app/main/default/objects/Enquiry__c/fields/Verification_referral_url__c.field-meta.xml
<CustomField>
    <fullName>Verification_referral_url__c</fullName>
    <description>verification url redirect to referal form</description>
    <formula>$Label.Landing_URL +&quot;verification?id=&quot;+Id+&quot;&amp;src=referral-iss&amp;role=referrer&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Verification referral url</label>
    <type>Text</type>
</CustomField>