force-app/main/default/objects/Enquiry__c/recordTypes/Enquiry_ISS.recordType-meta.xml
<RecordType>
    <fullName>Enquiry_ISS</fullName>
    <active>true</active>
    <description>This record type is for ISS</description>
    <label>Enquiry - ISS</label>
</RecordType>