force-app/main/default/objects/Enquiry__c/recordTypes/Enqury_CS.recordType-meta.xml
<RecordType>
    <fullName>Enqury_CS</fullName>
    <active>true</active>
    <description>This record type is for CS</description>
    <label>Enqury - CS</label>
</RecordType>