force-app/main/default/objects/Enquiry__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ClientNameEntered__c</columns>
    <columns>Enquiry_Status__c</columns>
    <columns>Full_Name_Referrer__c</columns>
    <columns>Full_Name_Parent__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Gender__c</columns>
    <columns>ID_Number__c</columns>
    <columns>Level__c</columns>
    <columns>Mode_of_Enquiry__c</columns>
    <columns>Date_of_Birth__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>